--- a/Src/Problem1/MainWindow.xaml
+++ b/Src/Problem1/MainWindow.xaml
@@ -1,9 +1,25 @@
 ﻿<Window x:Class="Problem1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="[taesiri] + [lashgari]" Height="276" Width="413" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+        Title="[taesiri] + [lashgari]" Height="276" Width="361" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <Grid>
-        <Button Content="Solve problem Using Method 1" Height="26" Margin="12,12,12,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" />
-        <Button Content="Edit Script" Height="26" Margin="12,44,12,0" Name="btnEditScript" VerticalAlignment="Top" Click="Button2Click" />
+        <Grid.Resources>
+            <ControlTemplate x:Key="ButtonTemplate" TargetType="{x:Type Button}">
+                <Border x:Name="Border" Background="OrangeRed" CornerRadius="4">
+                    <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
+                </Border>
+                <ControlTemplate.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter TargetName="Border" Property="Background" Value="Gold" />
+                    </Trigger>
+                    <Trigger Property="IsPressed" Value="True">
+                        <Setter TargetName="Border" Property="Background" Value="Orange" />
+                    </Trigger>
+                </ControlTemplate.Triggers>
+            </ControlTemplate>
+        </Grid.Resources>
+
+        <Button Content="Solve problem Using Method 1" Height="26" Margin="12,12,12,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" Template="{StaticResource ButtonTemplate}"/>
+        <Button Content="Edit Script" Height="26" Margin="12,44,12,0" Name="btnEditScript" VerticalAlignment="Top" Click="Button2Click" Template="{StaticResource ButtonTemplate}"/>
     </Grid>
 </Window>
