--- a/Src/Problem1/MainWindow.xaml
+++ b/Src/Problem1/MainWindow.xaml
@@ -1,25 +1,42 @@
 ﻿<Window x:Class="Problem1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="[taesiri] + [lashgari]" Height="276" Width="361" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+        Title="[taesiri] + [lashgari]" Height="368" Width="271" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <Grid>
         <Grid.Resources>
             <ControlTemplate x:Key="ButtonTemplate" TargetType="{x:Type Button}">
-                <Border x:Name="Border" Background="OrangeRed" CornerRadius="4">
+                <Border x:Name="Border" Background="DeepSkyBlue" CornerRadius="4">
                     <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
                 </Border>
                 <ControlTemplate.Triggers>
                     <Trigger Property="IsMouseOver" Value="True">
-                        <Setter TargetName="Border" Property="Background" Value="Gold" />
+                        <Setter TargetName="Border" Property="Background" Value="#0092C3" />
                     </Trigger>
                     <Trigger Property="IsPressed" Value="True">
-                        <Setter TargetName="Border" Property="Background" Value="Orange" />
+                        <Setter TargetName="Border" Property="Background" Value="#5BDAFF" />
                     </Trigger>
                 </ControlTemplate.Triggers>
             </ControlTemplate>
         </Grid.Resources>
 
-        <Button Content="Solve problem Using Method 1" Height="26" Margin="12,12,12,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" Template="{StaticResource ButtonTemplate}"/>
-        <Button Content="Edit Script" Height="26" Margin="12,44,12,0" Name="btnEditScript" VerticalAlignment="Top" Click="Button2Click" Template="{StaticResource ButtonTemplate}"/>
+        <Button Content="Solve problem Using Method 1" Height="26" Margin="12,12,12,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" Template="{StaticResource ButtonTemplate}" Cursor="Hand" />
+        <Button Content="Edit Script" Height="26" Margin="12,44,12,0" Name="btnEditScript" VerticalAlignment="Top" Click="BtnEditScriptClick" Template="{StaticResource ButtonTemplate}" Cursor="Hand" />
+        <Button Content="Exit !" Height="26" Margin="12,291,12,0" Name="btnExit"  VerticalAlignment="Top" Click="BtnExitClick" Cursor="Hand">
+            <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="Border" Background="#FF1717" CornerRadius="4">
+                        <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="#DC2F00" />
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="Orange" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
     </Grid>
 </Window>
