--- a/Src/Problem1/MainWindow.xaml
+++ b/Src/Problem1/MainWindow.xaml
@@ -71,6 +71,22 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        
+        <Button Content="Compare 2 Methods" Cursor="Hand" Height="26" Margin="12,76,12,0" Name="btnCompare" VerticalAlignment="Top">
+            <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="#CCFF00" CornerRadius="4" Name="Border">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="UIElement.IsMouseOver" Value="True">
+                            <Setter Property="Border.Background" TargetName="Border" Value="#0065C3" />
+                        </Trigger>
+                        <Trigger Property="ButtonBase.IsPressed" Value="True">
+                            <Setter Property="Border.Background" TargetName="Border" Value="#00FFCC" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
     </Grid>
 </Window>
