--- a/Binaries/debug/Templates/ReportTemplate-Method1.xaml
+++ b/Binaries/debug/Templates/ReportTemplate-Method1.xaml
@@ -1,6 +1,7 @@
-﻿<FlowDocument xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿﻿<FlowDocument xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:xrd="clr-namespace:CodeReason.Reports.Document;assembly=CodeReason.Reports"
+              xmlns:crcv="clr-namespace:CodeReason.Reports.Charts.Visifire;assembly=CodeReason.Reports.Charts.Visifire"
               PageHeight="29.7cm" PageWidth="21cm" ColumnWidth="21cm">
     <xrd:ReportProperties>
         <xrd:ReportProperties.ReportName>Generated Report</xrd:ReportProperties.ReportName>
@@ -10,7 +11,8 @@
         <Paragraph FontFamily="Segoe UI" FontSize="24" FontWeight="Bold" TextAlignment="Center">
             <xrd:InlineContextValue PropertyName="ReportTitle" />
         </Paragraph>
-        <Paragraph FontFamily="Segoe UI" FontSize="24" >First Approach</Paragraph>
+        <Paragraph FontFamily="Segoe UI" FontSize="26" >First Approach</Paragraph>
+        <!-- First Table -->
         <xrd:SectionDataGroup DataGroupName="ItemList">
             <Paragraph FontFamily="Segoe UI" FontSize="16" FontWeight="Bold">1st Bearing</Paragraph>
             <Table CellSpacing="0" BorderBrush="White" BorderThickness="0.02cm" FontFamily="Segoe UI">
@@ -19,7 +21,7 @@
                     <Style x:Key="headerFooterRowStyle" TargetType="{x:Type TableRowGroup}">
                         <Setter Property="FontWeight" Value="Normal"/>
                         <Setter Property="FontSize" Value="12"/>
-                        <Setter Property="Background" Value="#00D7FE"/>
+                        <Setter Property="Background" Value="#D700FE"/>
                     </Style>
 
                     <!-- Style for data rows. -->
@@ -113,6 +115,9 @@
                 </TableRowGroup>
             </Table>
         </xrd:SectionDataGroup>
+        
+        <!-- Second Table -->
+        <Section BreakPageBefore="True"/>
         <xrd:SectionDataGroup DataGroupName="ItemList">
             <Paragraph FontSize="16" FontWeight="Bold" FontFamily="Segoe UI">2nd Bearing</Paragraph>
             <Table CellSpacing="0" BorderBrush="White" BorderThickness="0.02cm" FontFamily="Segoe UI">
@@ -121,7 +126,7 @@
                     <Style x:Key="headerFooterRowStyle" TargetType="{x:Type TableRowGroup}">
                         <Setter Property="FontWeight" Value="Normal"/>
                         <Setter Property="FontSize" Value="12"/>
-                        <Setter Property="Background" Value="#DD00FE"/>
+                        <Setter Property="Background" Value="#FEA700"/>
                     </Style>
 
                     <!-- Style for data rows. -->
@@ -215,6 +220,10 @@
                 </TableRowGroup>
             </Table>
         </xrd:SectionDataGroup>
+        
+        
+        <!-- Third Table -->
+        <Section BreakPageBefore="True"/>
         <xrd:SectionDataGroup DataGroupName="ItemList">
             <Paragraph FontSize="16" FontWeight="Bold" FontFamily="Segoe UI">3rd Bearing</Paragraph>
             <Table CellSpacing="0" BorderBrush="White" BorderThickness="0.02cm" FontFamily="Segoe UI">
@@ -223,7 +232,7 @@
                     <Style x:Key="headerFooterRowStyle" TargetType="{x:Type TableRowGroup}">
                         <Setter Property="FontWeight" Value="Normal"/>
                         <Setter Property="FontSize" Value="12"/>
-                        <Setter Property="Background" Value="#FEEF00"/>
+                        <Setter Property="Background" Value="#0084EA"/>
                     </Style>
 
                     <!-- Style for data rows. -->
@@ -317,10 +326,26 @@
                 </TableRowGroup>
             </Table>
         </xrd:SectionDataGroup>
+        
         <Paragraph>
             There are
             <xrd:InlineAggregateValue AggregateGroup="ItemCount" AggregateValueType="Count" EmptyValue="no" FontWeight="Bold" /> item positions.
         </Paragraph>
+        <Section BreakPageBefore="True">
+            <Paragraph FontFamily="Segoe UI" FontSize="26" TextAlignment="Center">Charts</Paragraph>
+
+            <Paragraph FontFamily="Segoe UI" FontSize="22">LifeSpan Chart</Paragraph>
+            <Paragraph FontFamily="Tahoma" FontSize="14" FontWeight="Bold">
+                <crcv:BarChart TableName="BearingsLife3DChart" TableColumns="Bearing,Total LifeSpan" Width="16cm" Height="10cm" Title="Bearings LifeSpan" View3D="True">
+                </crcv:BarChart>
+            </Paragraph>
+            <Paragraph/>
+            <Paragraph FontFamily="Segoe UI" FontSize="22">Wasted Time Chart</Paragraph>
+            <Paragraph FontFamily="Tahoma" FontSize="14" FontWeight="Bold">
+                <crcv:DoughnutChart TableName="BearingsWastes3DChart" TableColumns="Bearing,Waste Time" Width="16cm" Height="10cm" Title="Wasted Time" View3D="True">
+                </crcv:DoughnutChart>
+            </Paragraph>
+        </Section>
         <Paragraph></Paragraph>
         <Paragraph FontFamily="Arial" FontSize="18" TextAlignment="Right" Foreground="Black">
 
