--- a/Src/Problem1/Dialog/NumberDialog.xaml
+++ b/Src/Problem1/Dialog/NumberDialog.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Class="Problem1.Dialog.NumberDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="User Action Required!" Height="180" Width="371" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False">
+        Title="User Action Required!" Height="191" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False">
     <Grid>
         <Label Content="Please select the number of failures" Height="28" HorizontalAlignment="Left" Margin="12,12,0,0" Name="label1" VerticalAlignment="Top" />
-        <TextBox Height="23"  Name="txtNumber" VerticalAlignment="Top" HorizontalAlignment="Center" Width="183" Margin="83,57,83,0" Text="12" />
-        <Button Content="OK" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" Name="button1" VerticalAlignment="Bottom" Width="75" Click="BtnOkClick" />
-        <Button Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,0,93,12" Name="button2" VerticalAlignment="Bottom" Width="75" Click="BtnCancelalick" />
+        <Button Content="OK" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" Name="button1" VerticalAlignment="Bottom" Width="108" Click="BtnOkClick" />
+        <Button Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,0,126,12" Name="button2" VerticalAlignment="Bottom" Width="108" Click="BtnCancelalick" />
+        <TextBox Height="30" Margin="94,58,88,0" Name="textBox1" VerticalAlignment="Top" Text="32" />
     </Grid>
 </Window>
