--- a/Src/Problem1/Templates/ReportTemplate-Method1.xaml
+++ b/Src/Problem1/Templates/ReportTemplate-Method1.xaml
@@ -1,6 +1,7 @@
-﻿<FlowDocument xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿﻿<FlowDocument xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:xrd="clr-namespace:CodeReason.Reports.Document;assembly=CodeReason.Reports" 
+              xmlns:xrd="clr-namespace:CodeReason.Reports.Document;assembly=CodeReason.Reports"
+              xmlns:crcv="clr-namespace:CodeReason.Reports.Charts.Visifire;assembly=CodeReason.Reports.Charts.Visifire"
               PageHeight="29.7cm" PageWidth="21cm" ColumnWidth="21cm">
     <xrd:ReportProperties>
         <xrd:ReportProperties.ReportName>Generated Report</xrd:ReportProperties.ReportName>
@@ -10,20 +11,21 @@
         <Paragraph FontFamily="Segoe UI" FontSize="24" FontWeight="Bold" TextAlignment="Center">
             <xrd:InlineContextValue PropertyName="ReportTitle" />
         </Paragraph>
-        <Paragraph FontFamily="Segoe UI" FontSize="24" >First Approach</Paragraph>
+        <Paragraph FontFamily="Segoe UI" FontSize="26" >First Approach</Paragraph>
+        <!-- First Table -->
         <xrd:SectionDataGroup DataGroupName="ItemList">
-            <Paragraph  FontFamily="Segoe UI" FontSize="16" FontWeight="Bold">1st Bearing</Paragraph>
+            <Paragraph FontFamily="Segoe UI" FontSize="16" FontWeight="Bold">1st Bearing</Paragraph>
             <Table CellSpacing="0" BorderBrush="White" BorderThickness="0.02cm" FontFamily="Segoe UI">
                 <Table.Resources>
                     <!-- Style for header/footer rows. -->
-                    <Style x:Key="headerFooterRowStyle" TargetType="{x:Type Table1RowGroup}">
+                    <Style x:Key="headerFooterRowStyle" TargetType="{x:Type TableRowGroup}">
                         <Setter Property="FontWeight" Value="Normal"/>
                         <Setter Property="FontSize" Value="12"/>
-                        <Setter Property="Background" Value="#00D7FE"/>
+                        <Setter Property="Background" Value="#D700FE"/>
                     </Style>
 
                     <!-- Style for data rows. -->
-                    <Style x:Key="dataRowStyle" TargetType="{x:Type Table1RowGroup}">
+                    <Style x:Key="dataRowStyle" TargetType="{x:Type TableRowGroup}">
                         <Setter Property="FontSize" Value="12"/>
                     </Style>
 
@@ -43,8 +45,8 @@
                     <TableColumn Width="0.25*" />
                     <TableColumn Width="0.25*" />
                 </Table.Columns>
-                <Table1RowGroup Style="{StaticResource headerFooterRowStyle}">
-                    <Table1Row>
+                <TableRowGroup Style="{StaticResource headerFooterRowStyle}">
+                    <TableRow>
                         <TableCell>
                             <Paragraph TextAlignment="Center">
                                 <Bold>No.</Bold>
@@ -75,57 +77,60 @@
                                 <Bold>Suspension Time</Bold>
                             </Paragraph>
                         </TableCell>
-                    </Table1Row>
-                </Table1RowGroup>
-                <Table1RowGroup Style="{StaticResource dataRowStyle}">
-                    <xrd:Table1RowForDataTable TableName="Bearing1Table">
+                    </TableRow>
+                </TableRowGroup>
+                <TableRowGroup Style="{StaticResource dataRowStyle}">
+                    <xrd:TableRowForDataTable TableName="Bearing1Table">
                         <TableCell>
                             <Paragraph>
                                 <xrd:InlineTableCellValue PropertyName="no" AggregateGroup="ItemCount"/>
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="RandomNumber1" />
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="LifeTime" />
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="CumulativeLifetime"/>
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="RandomNumber2" />
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="SuspensionTime" />
                             </Paragraph>
                         </TableCell>
-                    </xrd:Table1RowForDataTable>
-                </Table1RowGroup>
+                    </xrd:TableRowForDataTable>
+                </TableRowGroup>
             </Table>
         </xrd:SectionDataGroup>
+        
+        <!-- Second Table -->
+        <Section BreakPageBefore="True"/>
         <xrd:SectionDataGroup DataGroupName="ItemList">
             <Paragraph FontSize="16" FontWeight="Bold" FontFamily="Segoe UI">2nd Bearing</Paragraph>
             <Table CellSpacing="0" BorderBrush="White" BorderThickness="0.02cm" FontFamily="Segoe UI">
                 <Table.Resources>
                     <!-- Style for header/footer rows. -->
-                    <Style x:Key="headerFooterRowStyle" TargetType="{x:Type Table1RowGroup}">
+                    <Style x:Key="headerFooterRowStyle" TargetType="{x:Type TableRowGroup}">
                         <Setter Property="FontWeight" Value="Normal"/>
                         <Setter Property="FontSize" Value="12"/>
-                        <Setter Property="Background" Value="#DD00FE"/>
+                        <Setter Property="Background" Value="#FEA700"/>
                     </Style>
 
                     <!-- Style for data rows. -->
-                    <Style x:Key="dataRowStyle" TargetType="{x:Type Table1RowGroup}">
+                    <Style x:Key="dataRowStyle" TargetType="{x:Type TableRowGroup}">
                         <Setter Property="FontSize" Value="12"/>
                     </Style>
 
@@ -145,8 +150,8 @@
                     <TableColumn Width="0.25*" />
                     <TableColumn Width="0.25*" />
                 </Table.Columns>
-                <Table1RowGroup Style="{StaticResource headerFooterRowStyle}">
-                    <Table1Row>
+                <TableRowGroup Style="{StaticResource headerFooterRowStyle}">
+                    <TableRow>
                         <TableCell>
                             <Paragraph TextAlignment="Center">
                                 <Bold>No.</Bold>
@@ -177,57 +182,61 @@
                                 <Bold>Suspension Time</Bold>
                             </Paragraph>
                         </TableCell>
-                    </Table1Row>
-                </Table1RowGroup>
-                <Table1RowGroup Style="{StaticResource dataRowStyle}">
-                    <xrd:Table1RowForDataTable TableName="Bearing2Table">
+                    </TableRow>
+                </TableRowGroup>
+                <TableRowGroup Style="{StaticResource dataRowStyle}">
+                    <xrd:TableRowForDataTable TableName="Bearing2Table">
                         <TableCell>
                             <Paragraph>
                                 <xrd:InlineTableCellValue PropertyName="no" AggregateGroup="ItemCount"/>
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="RandomNumber1" />
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="LifeTime" />
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="CumulativeLifetime"/>
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="RandomNumber2" />
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="SuspensionTime" />
                             </Paragraph>
                         </TableCell>
-                    </xrd:Table1RowForDataTable>
-                </Table1RowGroup>
+                    </xrd:TableRowForDataTable>
+                </TableRowGroup>
             </Table>
         </xrd:SectionDataGroup>
+        
+        
+        <!-- Third Table -->
+        <Section BreakPageBefore="True"/>
         <xrd:SectionDataGroup DataGroupName="ItemList">
             <Paragraph FontSize="16" FontWeight="Bold" FontFamily="Segoe UI">3rd Bearing</Paragraph>
             <Table CellSpacing="0" BorderBrush="White" BorderThickness="0.02cm" FontFamily="Segoe UI">
                 <Table.Resources>
                     <!-- Style for header/footer rows. -->
-                    <Style x:Key="headerFooterRowStyle" TargetType="{x:Type Table1RowGroup}">
+                    <Style x:Key="headerFooterRowStyle" TargetType="{x:Type TableRowGroup}">
                         <Setter Property="FontWeight" Value="Normal"/>
                         <Setter Property="FontSize" Value="12"/>
-                        <Setter Property="Background" Value="#FEEF00"/>
+                        <Setter Property="Background" Value="#0084EA"/>
                     </Style>
 
                     <!-- Style for data rows. -->
-                    <Style x:Key="dataRowStyle" TargetType="{x:Type Table1RowGroup}">
+                    <Style x:Key="dataRowStyle" TargetType="{x:Type TableRowGroup}">
                         <Setter Property="FontSize" Value="12"/>
                     </Style>
 
@@ -247,8 +256,8 @@
                     <TableColumn Width="0.25*" />
                     <TableColumn Width="0.25*" />
                 </Table.Columns>
-                <Table1RowGroup Style="{StaticResource headerFooterRowStyle}">
-                    <Table1Row>
+                <TableRowGroup Style="{StaticResource headerFooterRowStyle}">
+                    <TableRow>
                         <TableCell>
                             <Paragraph TextAlignment="Center">
                                 <Bold>No.</Bold>
@@ -279,52 +288,68 @@
                                 <Bold>Suspension Time</Bold>
                             </Paragraph>
                         </TableCell>
-                    </Table1Row>
-                </Table1RowGroup>
-                <Table1RowGroup Style="{StaticResource dataRowStyle}">
-                    <xrd:Table1RowForDataTable TableName="Bearing3Table">
+                    </TableRow>
+                </TableRowGroup>
+                <TableRowGroup Style="{StaticResource dataRowStyle}">
+                    <xrd:TableRowForDataTable TableName="Bearing3Table">
                         <TableCell>
                             <Paragraph>
                                 <xrd:InlineTableCellValue PropertyName="no" AggregateGroup="ItemCount"/>
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="RandomNumber1" />
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="LifeTime" />
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="CumulativeLifetime"/>
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="RandomNumber2" />
                             </Paragraph>
                         </TableCell>
                         <TableCell>
-                            <Paragraph  TextAlignment="Center">
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="SuspensionTime" />
                             </Paragraph>
                         </TableCell>
-                    </xrd:Table1RowForDataTable>
-                </Table1RowGroup>
+                    </xrd:TableRowForDataTable>
+                </TableRowGroup>
             </Table>
         </xrd:SectionDataGroup>
+        
         <Paragraph>
             There are
             <xrd:InlineAggregateValue AggregateGroup="ItemCount" AggregateValueType="Count" EmptyValue="no" FontWeight="Bold" /> item positions.
         </Paragraph>
+        <Section BreakPageBefore="True">
+            <Paragraph FontFamily="Segoe UI" FontSize="26" TextAlignment="Center">Charts</Paragraph>
+
+            <Paragraph FontFamily="Segoe UI" FontSize="22">LifeSpan Chart</Paragraph>
+            <Paragraph FontFamily="Tahoma" FontSize="14" FontWeight="Bold">
+                <crcv:BarChart TableName="BearingsLife3DChart" TableColumns="Bearing,Total LifeSpan" Width="16cm" Height="10cm" Title="Bearings LifeSpan" View3D="True">
+                </crcv:BarChart>
+            </Paragraph>
+            <Paragraph/>
+            <Paragraph FontFamily="Segoe UI" FontSize="22">Wasted Time Chart</Paragraph>
+            <Paragraph FontFamily="Tahoma" FontSize="14" FontWeight="Bold">
+                <crcv:DoughnutChart TableName="BearingsWastes3DChart" TableColumns="Bearing,Waste Time" Width="16cm" Height="10cm" Title="Wasted Time" View3D="True">
+                </crcv:DoughnutChart>
+            </Paragraph>
+        </Section>
         <Paragraph></Paragraph>
         <Paragraph FontFamily="Arial" FontSize="18" TextAlignment="Right" Foreground="Black">
 
-            محمدرضا تأثیری  و  علی لشگری
+            محمدرضا تأثیری و علی لشگری
 
         </Paragraph>
     </Section>
