--- a/Src/Problem1/Templates/ReportTemplate-Method2.xaml
+++ b/Src/Problem1/Templates/ReportTemplate-Method2.xaml
@@ -1,6 +1,7 @@
 ﻿<FlowDocument xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:xrd="clr-namespace:CodeReason.Reports.Document;assembly=CodeReason.Reports" 
+              xmlns:crcv="clr-namespace:CodeReason.Reports.Charts.Visifire;assembly=CodeReason.Reports.Charts.Visifire"
               PageHeight="29.7cm" PageWidth="21cm" ColumnWidth="21cm">
     <xrd:ReportProperties>
         <xrd:ReportProperties.ReportName>Generated Report</xrd:ReportProperties.ReportName>
@@ -139,6 +140,24 @@
             There are
             <xrd:InlineAggregateValue AggregateGroup="ItemCount" AggregateValueType="Count" EmptyValue="no" FontWeight="Bold" /> item positions.
         </Paragraph>
+        <Section BreakPageBefore="True">
+            <Paragraph FontFamily="Segoe UI" FontSize="26" TextAlignment="Center">Charts</Paragraph>
+
+            <Paragraph FontFamily="Segoe UI" FontSize="22">LifeSpan Chart</Paragraph>
+            <Paragraph FontFamily="Tahoma" FontSize="14" FontWeight="Bold">
+                <!--<crcv:ColumnChart TableName="BearingsLife3DChart" TableColumns="Bearing,Total LifeSpan" Width="16cm" Height="10cm" Title="Bearings LifeSpan" View3D="True">
+                </crcv:ColumnChart>-->
+
+                <crcv:BarChart TableName="BearingsLife3DChart" TableColumns="Bearing,Total LifeSpan" Width="16cm" Height="10cm" Title="Bearings LifeSpan" View3D="True">
+                </crcv:BarChart>
+            </Paragraph>
+            <Paragraph/>
+            <Paragraph FontFamily="Segoe UI" FontSize="22">Wasted Time Chart</Paragraph>
+            <Paragraph FontFamily="Tahoma" FontSize="14" FontWeight="Bold">
+                <crcv:ColumnChart TableName="BearingsWastes3DChart" TableColumns="Bearing,Waste Time" Width="16cm" Height="10cm" Title="Wasted Time" View3D="True" >
+                </crcv:ColumnChart>
+            </Paragraph>
+        </Section>
         <Paragraph></Paragraph>
         <Paragraph FontFamily="Arial" FontSize="18" TextAlignment="Right" Foreground="Black">
 
