--- a/Src/Problem1/MainWindow.xaml
+++ b/Src/Problem1/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Problem1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="[taesiri] + [lashgari]" Height="368" Width="271" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Problem1;component/Images/about-us-red.ico">
+        Title="Problem 1 [taesiri][lashgari]" Height="368" Width="271" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Problem1;component/Images/about-us-red.ico">
     <Grid>
         <Grid.Resources>
             <ControlTemplate x:Key="ButtonTemplate" TargetType="{x:Type Button}">
