--- a/Src/Problem2/MainWindow.xaml
+++ b/Src/Problem2/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         
         Title="Problem 2 [taesiri][lashgari]" Height="425" Width="292"
-        WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Problem2;component/Images/about-us-red.ico" Loaded="Window_Loaded">
+        WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Problem2;component/Images/about-us-red.ico" Loaded="WindowLoaded">
     <Grid>
 
         <Button Content="Solving Problem - with preferences" Height="26" Margin="12,12,12,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" Template="{StaticResource ButtonTemplate}" Cursor="Hand" />
