--- a/Src/Problem1/MainWindow.xaml
+++ b/Src/Problem1/MainWindow.xaml
@@ -3,100 +3,28 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Problem 1 [taesiri][lashgari]" Height="368" Width="271" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Problem1;component/Images/about-us-red.ico">
     <Grid>
-        <Grid.Resources>
-            <ControlTemplate x:Key="ButtonTemplate" TargetType="{x:Type Button}">
-                <Border x:Name="Border" Background="DeepSkyBlue" CornerRadius="4">
-                    <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
-                </Border>
-                <ControlTemplate.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter TargetName="Border" Property="Background" Value="#0092C3" />
-                    </Trigger>
-                    <Trigger Property="IsPressed" Value="True">
-                        <Setter TargetName="Border" Property="Background" Value="#5BDAFF" />
-                    </Trigger>
-                </ControlTemplate.Triggers>
-            </ControlTemplate>
-        </Grid.Resources>
-
-        <Button Content="Solve problem Using Method 1" Height="26" Margin="12,12,12,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" Template="{StaticResource ButtonTemplate}" Cursor="Hand" />
+    
+        <Button Content="Solve problem Using Method 1" Height="26" Margin="12,12,12,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" Cursor="Hand" />
         <Button Content="Solve problem Using Method 2" Cursor="Hand" Height="26" Margin="12,44,12,0" Name="BtnSolve2" VerticalAlignment="Top" Click="BtnSolve2Click">
-            <Button.Template>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border x:Name="Border" Background="Lime" CornerRadius="4">
-                        <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="Border" Property="Background" Value="#0EC300" />
-                        </Trigger>
-                        <Trigger Property="IsPressed" Value="True">
-                            <Setter TargetName="Border" Property="Background" Value="#00FF1E" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Button.Template>
         </Button>
         <Button Content="Edit Script" Height="26" Margin="12,0,12,44" Name="btnEditScript" VerticalAlignment="Bottom" Click="BtnEditScriptClick"  Cursor="Hand" >
-            <Button.Template>
-            <ControlTemplate TargetType="{x:Type Button}">
-                <Border x:Name="Border" Background="#CC0099" CornerRadius="4">
-                    <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
-                </Border>
-                <ControlTemplate.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter TargetName="Border" Property="Background" Value="#9C00C3" />
-                    </Trigger>
-                    <Trigger Property="IsPressed" Value="True">
-                        <Setter TargetName="Border" Property="Background" Value="#8A00FF" />
-                    </Trigger>
-                </ControlTemplate.Triggers>
-            </ControlTemplate>
-            </Button.Template>
+          
         </Button>
         <Button Content="Exit !" Height="26" Margin="12,0,12,12" Name="btnExit"  VerticalAlignment="Bottom" Click="BtnExitClick" Cursor="Hand">
-            <Button.Template>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border x:Name="Border" Background="#FF1717" CornerRadius="4">
-                        <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="Border" Property="Background" Value="#DC2F00" />
-                        </Trigger>
-                        <Trigger Property="IsPressed" Value="True">
-                            <Setter TargetName="Border" Property="Background" Value="Orange" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Button.Template>
+           
         </Button>
         <Button Content="Compare 2 Methods" Cursor="Hand" Height="26" Margin="12,76,12,0" Name="btnCompare" VerticalAlignment="Top" IsEnabled="False">
-            <Button.Template>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="#CCFF00" CornerRadius="4" Name="Border">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="UIElement.IsMouseOver" Value="True">
-                            <Setter Property="Border.Background" TargetName="Border" Value="#0065C3" />
-                        </Trigger>
-                        <Trigger Property="ButtonBase.IsPressed" Value="True">
-                            <Setter Property="Border.Background" TargetName="Border" Value="#00FFCC" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Button.Template>
+           
         </Button>
         <Grid Height="145" Margin="12,0,12,76" Name="grid1" VerticalAlignment="Bottom">
             <Label Content="Choose Solver Engine" Height="28" HorizontalAlignment="Left" Margin="6,3,0,0" Name="label1" VerticalAlignment="Top" />
             <Border Margin="6,28,6,6" Name="border1" BorderThickness="1" BorderBrush="#BF9A9A9A">
                 <StackPanel Name="stackPanel1" Height="104" Width="206">
-                    <RadioButton Content="Built-In CSharp Function" Height="20" Name="rBtnBuiltInCSharp" VerticalContentAlignment="Center" />
-                    <RadioButton Content="IronPython Engine" Height="20" Name="rBtnIronPython" VerticalContentAlignment="Center" IsChecked="True" />
-                    <RadioButton Content="IronRuby Engine" Height="20" Name="radioButton3" VerticalContentAlignment="Center" IsEnabled="False" />
-                    <RadioButton Content="FSharp - Dynamic Library Invoker" Height="20" Name="radioButton4" VerticalContentAlignment="Center" IsEnabled="False" />
-                    <RadioButton Content="CSharp - Dynamic Library Invoker " Height="20" Name="radioButton5" VerticalContentAlignment="Center" IsEnabled="False" />
+                    <RadioButton Content="Built-In CSharp Function" Height="20" Name="rBtnBuiltInCSharp" VerticalContentAlignment="Center" Foreground="Black" Style="{Binding}"/>
+                    <RadioButton Content="IronPython Engine" Height="20" Name="rBtnIronPython" VerticalContentAlignment="Center" IsChecked="True"  Foreground="Black" Style="{Binding}"/>
+                    <RadioButton Content="IronRuby Engine" Height="20" Name="radioButton3" VerticalContentAlignment="Center" IsEnabled="False"  Foreground="Black"/>
+                    <RadioButton Content="FSharp - Dynamic Library Invoker" Height="20" Name="radioButton4" VerticalContentAlignment="Center" IsEnabled="False"  Foreground="Black" Style="{Binding}"/>
+                    <RadioButton Content="CSharp - Dynamic Library Invoker " Height="20" Name="radioButton5" VerticalContentAlignment="Center" IsEnabled="False"  Foreground="Black" Style="{Binding}"/>
                 </StackPanel>
             </Border>
         </Grid>
