--- a/Src/Problem2/MainWindow.xaml
+++ b/Src/Problem2/MainWindow.xaml
@@ -1,23 +1,23 @@
 ﻿<Window x:Class="Problem2.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         
-        Title="Problem 2 [taesiri][lashgari]" Height="425" Width="292"
+        Title="Problem 2 [taesiri][lashgari]" Height="425" Width="300"
         WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Problem2;component/Images/about-us-red.ico" Loaded="WindowLoaded">
     <Grid>
 
         <Button Content="Solving Problem - with preferences" Height="26" Margin="12,12,12,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" Template="{StaticResource ButtonTemplate}" Cursor="Hand" />
         <Button Content="Solving Problem - without preferences" Cursor="Hand" Height="26" Margin="12,44,12,0" Name="BtnSolve2" VerticalAlignment="Top" Click="BtnSolve2Click"/>
-        <Button Content="Edit Script" Height="26" Margin="12,0,12,44" Name="btnEditScript" VerticalAlignment="Bottom" Click="BtnEditScriptClick"  Cursor="Hand" />
+        <Button Content="Edit Script" Height="26" Margin="12,0,12,44" Name="btnEditScript" VerticalAlignment="Bottom" Click="BtnEditScriptClick"  Cursor="Hand" IsEnabled="False" />
         <Button Content="Exit !" Height="26" Margin="12,0,12,12" Name="btnExit"  VerticalAlignment="Bottom" Click="BtnExitClick" Cursor="Hand"/>
-        <Button Content="Compare 2 Methods" Cursor="Hand" Height="26" Margin="12,76,12,0" Name="btnCompare" VerticalAlignment="Top"/>
-        <Grid Height="122" Margin="12,0,12,76" Name="grid1" VerticalAlignment="Bottom">
+        <Grid Height="96" Margin="12,0,12,76" Name="grid1" VerticalAlignment="Bottom">
             <Label Content="Choose Solver Engine" Height="28" HorizontalAlignment="Left" Margin="6,3,0,0" Name="label1" VerticalAlignment="Top" />
-            <Border Margin="6,28,6,6" Name="border1" BorderThickness="1" BorderBrush="#BF9A9A9A">
-                <StackPanel Name="stackPanel1" Height="75" Width="212">
+            <Border Margin="19,31,17,6" Name="border1" BorderThickness="1" BorderBrush="#BF9A9A9A">
+                <StackPanel Name="stackPanel1" Height="52" Width="212">
                     <RadioButton Content="Built-In CSharp Function" Height="20" Name="rBtnBuiltInCSharp" VerticalContentAlignment="Center" Foreground="#FF030303" IsChecked="True" IsEnabled="True" Style="{Binding}" />
-                    <RadioButton Content="IronPython Engine" Height="20" Name="rBtnIronPython" VerticalContentAlignment="Center" Foreground="#FF030303"  Style="{Binding}" />
+                    <RadioButton Content="IronPython Engine" Height="20" Name="rBtnIronPython" VerticalContentAlignment="Center" Foreground="#FF030303" Style="{Binding}" IsEnabled="False" />
                 </StackPanel>
             </Border>
         </Grid>
+        
     </Grid>
 </Window>
