--- a/Src/Simulation/MainWindow.xaml
+++ b/Src/Simulation/MainWindow.xaml
@@ -1,8 +1,17 @@
 ﻿<Window x:Class="Simulation.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Simulation " Height="382" Width="486" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" AllowsTransparency="False" ShowInTaskbar="False" WindowStyle="ThreeDBorderWindow">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="Black" Offset="0" />
+            <GradientStop Color="#FF585858" Offset="1" />
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
-        
+        <Button Content="Problem 1" Height="55"  Width="250" Name="btnProblem1" Margin="107,64,107,192" Cursor="Hand" />
+        <Button Content="Problem 2" Height="55" Margin="107,125,107,131" Name="btnProblem2" Width="250" Cursor="Hand" />
+        <Button Content="Exit" Height="55" Margin="107,186,107,70" Name="btnExit" Width="250" Cursor="Hand" Click="BtnExitClick" />
+        <Label Content="MohammadReza Taesiri &amp; Ali Lashgari" Height="28" HorizontalAlignment="Left" Margin="12,0,0,12" Name="label1" VerticalAlignment="Bottom" Foreground="White" />
     </Grid>
 </Window>
