--- a/Src/Problem2/Dialog/NumberDialog.xaml
+++ b/Src/Problem2/Dialog/NumberDialog.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Problem2.Dialog.NumberDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="User Action Required!" Height="272" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False">
+        Title="User Action Required!" Height="279" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False">
     <Window.Background>
         <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
             <GradientStop Color="#FFC7D0DD" Offset="0" />
@@ -12,7 +12,7 @@
         <Label Content="Please Select the number of total Customers" Height="28" HorizontalAlignment="Left" Margin="12,12,0,0" Name="label1" VerticalAlignment="Top" />
         <Button Content="OK" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" Name="button1" VerticalAlignment="Bottom" Width="108" Click="BtnOkClick" />
         <Button Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,0,126,12" Name="button2" VerticalAlignment="Bottom" Width="108" Click="BtnCancelalick" />
-        <TextBox Height="30" Margin="55,46,93,0" Name="textBox1" VerticalAlignment="Top" Text="32" />
+        <TextBox Height="30" Margin="55,46,29,0" Name="textBox1" VerticalAlignment="Top" Text="32" TextAlignment="Left" VerticalContentAlignment="Center" />
         <Label Content="Output Options" Height="17" HorizontalAlignment="Left" Margin="12,99,0,0" Name="label2" VerticalAlignment="Top" Width="187" />
         <CheckBox Content="Normal (Printable Output)" Foreground="#FF030303" Height="16" HorizontalAlignment="Left" Margin="55,132,0,0" Name="chkNormalO" VerticalAlignment="Top" IsChecked="True" Style="{Binding}" />
         <CheckBox Content="Timline (Graphical Output)" Foreground="#FF030303" Height="16" HorizontalAlignment="Left" Margin="55,154,0,0" Name="chkTimeline" VerticalAlignment="Top" IsChecked="True" Style="{Binding}"/>
