--- a/Src/Problem2/Templates/ReportTemplate-Method2.xaml
+++ b/Src/Problem2/Templates/ReportTemplate-Method2.xaml
@@ -35,11 +35,14 @@
         <Paragraph TextAlignment="Center">
             <Image Tag="aut.jpg" Width="8cm"  />
         </Paragraph>
-        <Paragraph TextAlignment="Center"  FontFamily="Arial" FontSize="48" FontWeight="Bold">
-            گزارش
+        <Paragraph TextAlignment="Center"  FontFamily="Segoe UI" FontSize="38" FontWeight="Bold">
+            Report
         </Paragraph>
-        <Paragraph TextAlignment="Center" FontFamily="Arial" FontSize="24">
-            حل  با استفاده از روش دوم
+        <Paragraph TextAlignment="Center"  FontFamily="Segoe UI" FontSize="46" FontWeight="Bold">
+            Sonic Drive-In’s Customers!
+        </Paragraph>
+        <Paragraph TextAlignment="Center" FontFamily="Segoe UI" FontSize="16">
+            Case Study 2: There are no preferences between Carhops!
         </Paragraph>
         <Paragraph/>
         <Paragraph/>
@@ -50,13 +53,19 @@
             تهیه کنندگان
         </Paragraph>
         <Paragraph TextAlignment="Center" FontFamily="Arial" FontSize="18">
-            محمدرضا تأثیری - 8812076
+            فاطمه نيک خواه - 8828096
         </Paragraph>
-        <Paragraph TextAlignment="Center" FontFamily="Arial" FontSize="16">
-            و
+        <Paragraph TextAlignment="Center" FontFamily="Arial" FontSize="18">
+            محمدرضا تأثیری - 8812076
         </Paragraph>
         <Paragraph TextAlignment="Center" FontFamily="Arial" FontSize="18">
             علی لشگری - 8725717
+        </Paragraph>
+    </Section>
+    <Section BreakPageBefore="True">
+        <Paragraph/>
+        <Paragraph FontFamily="Segoe UI" FontSize="14" FontStyle="Italic"  TextAlignment="Center">
+            [This Page Intentionally Left Blank]
         </Paragraph>
     </Section>
     <Section Padding="80,10,40,10" FontSize="12" BreakPageBefore="True">
