--- a/Src/Problem1/MainWindow.xaml
+++ b/Src/Problem1/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Problem1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Problem 1 [taesiri][lashgari]" Height="368" Width="300" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Problem1;component/Images/about-us-red.ico">
+        Title="P1 [nikkhah.taesiri.lashgari]" Height="386" Width="286" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Problem1;component/icon.ico">
     <Grid>
     
         <Button Content="Solve problem Using Method 1" Height="26" Margin="12,12,12,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" Cursor="Hand" />
@@ -19,10 +19,10 @@
         <Grid Height="145" Margin="12,0,12,76" Name="grid1" VerticalAlignment="Bottom">
             <Label Content="Choose Solver Engine" Height="28" HorizontalAlignment="Left" Margin="6,3,0,0" Name="label1" VerticalAlignment="Top" />
             <Border Margin="6,28,6,6" Name="border1" BorderThickness="1" BorderBrush="#BF9A9A9A">
-                <StackPanel Name="stackPanel1" Height="104" Width="206">
+                <StackPanel Name="stackPanel1" Height="104" Width="219">
                     <RadioButton Content="Built-In CSharp Function" Height="20" Name="rBtnBuiltInCSharp" IsChecked="True" VerticalContentAlignment="Center" Foreground="Black" Style="{Binding}"/>
                     <RadioButton Content="IronPython Engine" Height="20" Name="rBtnIronPython" VerticalContentAlignment="Center"   Foreground="Black" Style="{Binding}"/>
-                    <RadioButton Content="IronRuby Engine" Height="20" Name="radioButton3" VerticalContentAlignment="Center" IsEnabled="False"  Foreground="Black"/>
+                    <RadioButton Content="IronRuby Engine" Height="20" Name="radioButton3" VerticalContentAlignment="Center" IsEnabled="False"  Foreground="Black" Style="{Binding}"/>
                     <RadioButton Content="FSharp - Dynamic Library Invoker" Height="20" Name="radioButton4" VerticalContentAlignment="Center" IsEnabled="False"  Foreground="Black" Style="{Binding}"/>
                     <RadioButton Content="CSharp - Dynamic Library Invoker " Height="20" Name="radioButton5" VerticalContentAlignment="Center" IsEnabled="False"  Foreground="Black" Style="{Binding}"/>
                 </StackPanel>
