--- a/Src/Problem2/MainWindow.xaml
+++ b/Src/Problem2/MainWindow.xaml
@@ -1,22 +1,23 @@
 ﻿<Window x:Class="Problem2.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         
-        Title="Problem 2 [taesiri][lashgari]" Height="425" Width="300"
-        WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Problem2;component/Images/about-us-red.ico" Loaded="WindowLoaded" xmlns:my="clr-namespace:Problem2.GraphicalOutput">
+        Title="P2 [nikkhah.taesiri.lashgari]" Height="361" Width="358"
+        WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Problem2;component/icon.ico">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+            <GradientStop Color="#FFC7D0DD" Offset="0" />
+            <GradientStop Color="#FF6587AF" Offset="1" />
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
-
-        <Button Content="Solving Problem - with preferences" Height="26" Margin="12,12,12,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" Template="{StaticResource ButtonTemplate}" Cursor="Hand" />
-        <Button Content="Solving Problem - without preferences" Cursor="Hand" Height="26" Margin="12,44,12,0" Name="BtnSolve2" VerticalAlignment="Top" Click="BtnSolve2Click"/>
-        <Button Content="Edit Script" Height="26" Margin="12,0,12,44" Name="btnEditScript" VerticalAlignment="Bottom" Click="BtnEditScriptClick"  Cursor="Hand" IsEnabled="False" />
-        <Button Content="Exit !" Height="26" Margin="12,0,12,12" Name="btnExit"  VerticalAlignment="Bottom" Click="BtnExitClick" Cursor="Hand"/>
-        <Grid Height="96" Margin="12,0,12,76" Name="grid1" VerticalAlignment="Bottom">
-            <Label Content="Choose Solver Engine" Height="28" HorizontalAlignment="Left" Margin="6,3,0,0" Name="label1" VerticalAlignment="Top" />
-            <Border Margin="19,31,17,6" Name="border1" BorderThickness="1" BorderBrush="#BF9A9A9A">
-                <StackPanel Name="stackPanel1" Height="52" Width="212">
-                    <RadioButton Content="Built-In CSharp Function" Height="20" Name="rBtnBuiltInCSharp" VerticalContentAlignment="Center" Foreground="#FF030303" IsChecked="True" IsEnabled="True" Style="{Binding}" />
-                    <RadioButton Content="IronPython Engine" Height="20" Name="rBtnIronPython" VerticalContentAlignment="Center" Foreground="#FF030303" Style="{Binding}" IsEnabled="False" />
-                </StackPanel>
-            </Border>
-        </Grid>
+        <Button Content="Exit !" Height="26" Margin="12,0,9,12" Name="btnExit"  VerticalAlignment="Bottom" Click="BtnExitClick" Cursor="Hand"/>
+        <GroupBox Header="Solvers" Height="266" Margin="12,12,9,0" Name="groupBox1" VerticalAlignment="Top">
+            <Grid>
+                <Button Content="Solving Problem - Case 1" Height="26" Margin="58,49,42,0" Name="BtnSolve1" VerticalAlignment="Top" Click="BtnSolve1Click" Template="{StaticResource ButtonTemplate}" Cursor="Hand" />
+                <Button Content="Solving Problem - Case 2" Cursor="Hand" Height="26" Margin="58,128,42,0" Name="BtnSolve2" VerticalAlignment="Top" Click="BtnSolve2Click" />
+                <Label Content="Case 1 - With Preferences : " Height="28" HorizontalAlignment="Left" Name="label1" VerticalAlignment="Top" VerticalContentAlignment="Center" Margin="13,15,0,0" />
+                <Label Content="Case 2 - Without Preferences : " Height="28" HorizontalAlignment="Left" Margin="13,94,0,0" Name="label2" VerticalAlignment="Top" VerticalContentAlignment="Center" />
+            </Grid>
+        </GroupBox>
     </Grid>
 </Window>
