--- a/Src/Problem2/Templates/ReportTemplate-Method2.xaml
+++ b/Src/Problem2/Templates/ReportTemplate-Method2.xaml
@@ -223,7 +223,7 @@
                     <Style x:Key="headerFooterRowStyle" TargetType="{x:Type TableRowGroup}">
                         <Setter Property="FontWeight" Value="Normal"/>
                         <Setter Property="FontSize" Value="12"/>
-                        <Setter Property="Background" Value="Azure"/>
+                        <Setter Property="Background" Value="Orange"/>
                     </Style>
 
                     <!-- Style for data rows. -->
