--- a/Src/Problem2/Templates/ReportTemplate-Method2.xaml
+++ b/Src/Problem2/Templates/ReportTemplate-Method2.xaml
@@ -72,7 +72,7 @@
         <Paragraph FontFamily="Segoe UI" FontSize="24" FontWeight="Bold" TextAlignment="Center">
             <xrd:InlineContextValue PropertyName="ReportTitle" />
         </Paragraph>
-        <Paragraph FontFamily="Segoe UI" FontSize="26" >Solving case with Preferences between carhops</Paragraph>
+        <Paragraph FontFamily="Segoe UI" FontSize="26" >Solving case with no Preferences between carhops</Paragraph>
         <!-- Table -->
         <xrd:SectionDataGroup DataGroupName="ItemList">
             <Table CellSpacing="0" BorderBrush="White" BorderThickness="0.02cm" FontFamily="Segoe UI">
